# bay-cast-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
main/: settings.py  urls.py
product/: admin.py  models.py  serializers.py  utils.py  views.py
product/fixtures/: stations.json
product/migrations/: 0001_initial.py  0002_processingimages_process.py  0003_station_process_station.py  0004_alter_process_stage.py  0005_alter_process_entry_time_alter_process_exit_time.py  0006_moldingfloor_rammingfloor_remove_process_baume_and_more.py  0007_remove_castingsnapshot_sand_temperature_and_more.py  0008_delete_castingsnapshot_delete_moldingfloor_and_more.py  0009_moldingfloor_pour_quality_rammingfloor_shakeout_and_more.py  0010_alter_castingsnapshot_molding_floor_and_more.py  0011_alter_moldingfloor_cope_heat_applied_and_more.py  0012_alter_quality_comments.py  0013_process_is_active.py
user/: admin.py  filterset.py  models.py  serializers.py  tests.py  views.py
user/migrations/: 0001_initial.py
